--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="skill-row">
             <img class="skill1" src="https://media.giphy.com/media/l0HlNaQ6gWfllcjDO/giphy.gif" alt="computer">
             <h3>Web Development</h3>
-            <p>A beginner at the web Development. Have a crtificate for HTML &CSS. Currently, pursuing course for Full stack developer. </p>
+            <p>A beginner at the web Development. Have a certificate for HTML &CSS. Currently, pursuing course for Full stack developer. </p>
           </div>
           <div class="skill-row">
             <img class="skill2" src="images/group.png" alt="management">
